# MistyLog

./: .env.example  .gitignore  Cargo.toml  Dockerfile  TODO.md  docker-compose.yml
backend/: Cargo.toml
backend/src/: config.rs  errors.rs  main.rs  seeds.rs
backend/src/handlers/: auth.rs  games.rs  mod.rs  reviews.rs
backend/src/middleware/: auth.rs
backend/src/models/: game.rs  mod.rs  review.rs  user.rs
backend/src/routes/: auth.rs  games.rs  mod.rs  reviews.rs  seed.rs
backend/src/services/: mod.rs  rawg.rs
frontend/: Cargo.toml  Trunk.toml  build-css.js  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: api.rs  app.rs  main.rs  mock_data.rs  shadcn_classes.rs
frontend/src/components/: game_card.rs  mod.rs  navbar.rs  rating_stars.rs  review_card.rs  review_form.rs
frontend/src/pages/: game_detail.rs  game_list.rs  home.rs  mod.rs  not_found.rs  profile.rs
frontend/style/: input.css  output.css
migration/: Cargo.toml
migration/src/: lib.rs  m20240101_000001_create_users.rs  m20240101_000002_create_games.rs  m20240101_000003_create_reviews.rs
