[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
actix-session = { version = "0.10", features = ["redis-session"] }
sea-orm = { version = "1.1", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-uuid",
] }
migration = { path = "../migration" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tokio = { version = "1", features = ["full"] }
openidconnect = "4"
reqwest = { version = "0.12", features = ["json"] }
dotenvy = "0.15"
env_logger = "0.11"
log = "0.4"
thiserror = "2"
url = "2"
urlencoding = "2"
