[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos_router = "0.8"
leptos_meta = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
gloo-net = { version = "0.6", features = ["json"] }
gloo-storage = "0.3"
web-sys = { version = "0.3", features = ["Window", "Location"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
log = "0.4"
console_log = "1"
console_error_panic_hook = "0.1"

# shadcn UI components
leptos-shadcn-button = "0.4"
leptos-shadcn-card = "0.4"
leptos-shadcn-badge = "0.4"
leptos-shadcn-input = "0.4"
leptos-shadcn-textarea = "0.4"
leptos-shadcn-label = "0.4"
leptos-shadcn-separator = "0.4"
leptos-shadcn-skeleton = "0.4"
leptos-shadcn-avatar = "0.4"
