[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos_router = "0.8"
leptos_meta = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
gloo-net = { version = "0.6", features = ["json"] }
gloo-storage = "0.3"
web-sys = { version = "0.3", features = ["Window", "Location"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
uuid = { version = "1", features = ["js"] }
log = "0.4"
console_log = "1"
console_error_panic_hook = "0.1"

# shadcn UI components
leptos-shadcn-accordion = "0.4"
leptos-shadcn-alert = "0.4"
leptos-shadcn-alert-dialog = "0.4"
leptos-shadcn-aspect-ratio = "0.4"
leptos-shadcn-button = "0.4"
# leptos-shadcn-breadcrumb removed: hardcodes leptos/ssr
leptos-shadcn-calendar = "0.4"
leptos-shadcn-carousel = "0.4"
leptos-shadcn-card = "0.4"
leptos-shadcn-checkbox = "0.4"
leptos-shadcn-collapsible = "0.4"
leptos-shadcn-combobox = "0.4"
# leptos-shadcn-command removed: hardcodes leptos/ssr
leptos-shadcn-context-menu = "0.4"
leptos-shadcn-date-picker = "0.4"
leptos-shadcn-dialog = "0.4"
leptos-shadcn-drawer = "0.4"
leptos-shadcn-dropdown-menu = "0.4"
leptos-shadcn-error-boundary = "0.4"
leptos-shadcn-form = "0.4"
leptos-shadcn-hover-card = "0.4"
leptos-shadcn-badge = "0.4"
leptos-shadcn-input = "0.4"
# leptos-shadcn-input-otp removed: hardcodes leptos/ssr
leptos-shadcn-textarea = "0.4"
leptos-shadcn-label = "0.4"
leptos-shadcn-lazy-loading = "0.4"
leptos-shadcn-menubar = "0.4"
leptos-shadcn-navigation-menu = "0.4"
leptos-shadcn-pagination = "0.4"
leptos-shadcn-popover = "0.4"
leptos-shadcn-progress = "0.4"
leptos-shadcn-radio-group = "0.4"
leptos-shadcn-resizable = "0.4"
leptos-shadcn-scroll-area = "0.4"
# leptos-shadcn-select removed: v0.4 hardcodes leptos/ssr, breaking CSR mode
leptos-shadcn-separator = "0.4"
leptos-shadcn-sheet = "0.4"
leptos-shadcn-skeleton = "0.4"
leptos-shadcn-slider = "0.4"
leptos-shadcn-switch = "0.4"
leptos-shadcn-table = "0.4"
leptos-shadcn-tabs = "0.4"
leptos-shadcn-toast = "0.4"
leptos-shadcn-toggle = "0.4"
leptos-shadcn-tooltip = "0.4"
leptos-shadcn-avatar = "0.4"
